feat: endpoint posts and refector some constructors in AuthorDto